[package]
name = "simopt-extensions"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simopt_extensions"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
mrg32k3a-rs = { git = "https://github.com/simopt-admin/mrg32k3a", rev = "85da10f", version = "0.1.0" }
pyo3 = { version = "0.27.0", features = ["anyhow"] }
thiserror = "2.0.17"
