[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "simopt-extensions"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
[project.optional-dependencies]
tests = [
    "pytest",
    "simoptlib>=1.2.1",
]
[tool.maturin]
python-source = "python"
